# collectd

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  Makefile.am  Makefile.in  README  README.md  aclocal.m4  build.sh  configure  configure.ac  configure.in
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
bindings/: Makefile.in
bindings/java/: Makefile.in
libltdl/: Makefile.in  aclocal.m4  config-h.in  config.h  configure
libltdl/.deps/: dlopen.Plo  libltdlc_la-lt__alloc.Plo  libltdlc_la-lt_dlloader.Plo  libltdlc_la-lt_error.Plo  libltdlc_la-ltdl.Plo  libltdlc_la-preopen.Plo  libltdlc_la-slist.Plo  lt__strl.Plo
libltdl/config/: config.guess  config.sub  ltmain.sh
proto/: Makefile.in
src/: Makefile.am  Makefile.in  barometer.c  ceph.c  collectd.conf.in  collectd.conf.pod  config.h.in  curl_json.c  df.c  disk.c  dns.c  docker.c  dpdkevents.c  email.c  eventlog.c  eventlogres.mc  exec.c  intel_pmu.c  intel_rdt.c  interface.c  ipmi.c  match_regex.c  match_throttle_metadata_keys.c  memcached.c  memory.c  modbus.c  mongodb.c  mysql.c  network.c  nfs.c  nginx.c  ntpd.c  perl.c  plugin_mem.c  postgresql.c  powerdns.c  processes.c  read_agent_logging.in  redis.c  stackdriver_agent.c  (+18 more)
src/daemon/: Makefile.in  collectd.c  collectd.h  collectd_svc.c  collectd_windows.c  common.c  common.h  configfile.c  filter_chain.c  meta_data.c  meta_data.h  plugin.c  plugin.h  plugin_mock.c  types_list.c  utils_avltree.c  utils_avltree.h  utils_cache.c  utils_subst.c  utils_time.c  utils_time.h
stackdriver/: README.md  package-build.sh
(+938 files in other folders)
